# p2psdk

./: .gitignore  README.md  build-arkts-napi-so.sh  build-rust-demo.sh  build-so.sh  build.jwt.path
app-test-hmos/: .gitignore  build-profile.json5
app-test-hmos/AppScope/: app.json5
app-test-hmos/AppScope/resources/base/element/: string.json
app-test-hmos/entry/: hvigorfile.ts
app-test-hmos/entry/src/main/: module.json5
app-test-hmos/entry/src/main/cpp/: CMakeLists.txt
app-test-hmos/entry/src/main/cpp/types/libppsdk/: index.d.ts
app-test-hmos/entry/src/main/ets/entryability/: EntryAbility.ets
app-test-hmos/entry/src/main/ets/pages/: IdsPage.ets  IdsPage2.ets  Index.ets  PushTokenPage.ets
app-test-hmos/entry/src/main/ets/sdk/: AppConfig.ets
app-test-hmos/entry/src/main/resources/base/element/: string.json
app-test-hmos/entry/src/main/resources/rawfile/: app_config.json  config.example.json
app-test-rust/: Cargo.toml  build.rs  config.example.json
app-test-rust/.cargo/: config.toml
app-test-rust/src/: main.rs
docs/: p2psdk-rust-api.md  p2psdk-rust-system-design.md
sdk/: Cargo.toml
sdk/.cargo/: config.toml
sdk/crates/dimpl/: .cargo_vcs_info.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.orig  README.md  deny.toml
sdk/crates/dimpl/.github/workflows/: cargo.yml  codeql.yml  fuzz.yml
sdk/crates/dimpl/src/: auto.rs  buffer.rs  config.rs  error.rs  lib.rs  rng.rs  types.rs  util.rs  window.rs
sdk/crates/dimpl/src/crypto/: ccm_cipher.rs  dtls_aead.rs  keying.rs  mod.rs  prf_hkdf.rs  provider.rs
sdk/crates/dimpl/src/crypto/aws_lc_rs/: cipher_suite.rs  hash.rs  hmac.rs  kx_group.rs  mod.rs  random.rs  sign.rs
sdk/crates/dimpl/src/crypto/rust_crypto/: cipher_suite.rs  hash.rs  hmac.rs  kx_group.rs  mod.rs  random.rs  sign.rs
sdk/crates/dimpl/src/crypto/validation/: mod.rs  rsa2048_cert.der
sdk/crates/dimpl/src/dtls12/: client.rs  context.rs  engine.rs  incoming.rs  mod.rs  queue.rs  server.rs
sdk/crates/dimpl/src/dtls12/message/: certificate.rs  certificate_request.rs  client_hello.rs  client_key_exchange.rs  digitally_signed.rs  extension.rs  finished.rs  handshake.rs  hello_verify.rs  mod.rs  named_group.rs  record.rs  server_hello.rs  server_key_exchange.rs
sdk/crates/dimpl/src/dtls12/message/extensions/: ec_point_formats.rs  signature_algorithms.rs  supported_groups.rs  use_srtp.rs
sdk/crates/dimpl/src/dtls13/: client.rs  engine.rs  incoming.rs  mod.rs  queue.rs  server.rs
sdk/crates/dimpl/src/dtls13/message/: certificate.rs  certificate_verify.rs  client_hello.rs  digitally_signed.rs  encrypted_extensions.rs  extension.rs  finished.rs  handshake.rs  mod.rs  record.rs  server_hello.rs  wrapped.rs
sdk/crates/dimpl/src/dtls13/message/extensions/: key_share.rs  mod.rs  signature_algorithms.rs  supported_groups.rs  supported_versions.rs  use_srtp.rs
sdk/crates/dimpl/tests/auto/: common.rs  cross_matrix.rs  handshake.rs  main.rs  server_fallback.rs
sdk/crates/dimpl/tests/dtls12/: common.rs  crypto.rs  data.rs  edge.rs  fragmentation.rs  handshake.rs  main.rs  ossl.rs  psk.rs  reorder.rs  retransmit.rs
sdk/crates/dimpl/tests/dtls13/: common.rs  data.rs  edge.rs  fragmentation.rs  handshake.rs  key_update.rs  main.rs  reorder.rs  retransmit.rs  wolfssl.rs
sdk/crates/dimpl/tests/ossl/: cert.rs  dtls.rs  io_buf.rs  mod.rs  stream.rs
sdk/crates/dimpl/tests/wolfssl/: mod.rs
sdk/crates/p2p-core/: Cargo.toml
sdk/crates/p2p-core/src/: crypto.rs  frame.rs  lib.rs  sdp.rs  types.rs
sdk/crates/p2p-core/src/dtls/: session.rs
sdk/crates/p2p-core/src/ice/: agent.rs  candidate.rs  check_list.rs  mod.rs  stun_codec.rs
sdk/crates/p2p-core/src/stun/: client.rs  codec.rs  message.rs  mod.rs
sdk/crates/p2p-core/src/turn/: session.rs
sdk/crates/p2p-io/: Cargo.toml
sdk/crates/p2p-io/src/: lib.rs  traits.rs
sdk/crates/p2p-napi/: Cargo.toml  build.rs
sdk/crates/p2p-napi/src/: c_export.rs  client_napi.rs  hilog.rs  lib.rs  napi_bridge.rs
sdk/crates/p2p-sdk/: Cargo.toml  build.rs
sdk/crates/p2p-sdk/src/: client.rs  config.rs  connector.rs  ids.rs  lib.rs  token.rs
sdk/crates/p2p-tokio/: Cargo.toml
sdk/crates/p2p-tokio/src/: http.rs  lib.rs  platform.rs  udp.rs  ws.rs
(+1 files in other folders)
