[package]
name = "p2p-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
crc = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
dimpl = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
