[package]
name = "ppsdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
p2p-core = { path = "../p2p-core" }
p2p-io = { path = "../p2p-io" }
p2p-sdk = { path = "../p2p-sdk" }
p2p-tokio = { path = "../p2p-tokio" }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"

[build-dependencies]
