[package]
name = "p2p-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
p2p-core = { path = "../p2p-core" }
p2p-io = { path = "../p2p-io" }
p2p-tokio = { path = "../p2p-tokio" }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
ureq = { version = "2", features = ["json"] }

[build-dependencies]
sha2 = { workspace = true }
aes-gcm = { workspace = true }
